--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
           <img src="assets/media/5.JPG" alt="photo5" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/6.JPG" alt="photo6" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/7.JPG" alt="photo7" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
+          <img src="assets/media/14.jpeg" alt="photo14" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/8.JPG" alt="photo8" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
-          <img src="assets/media/9.JPeG" alt="photo9" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
+          <img src="assets/media/9.jpeg" alt="photo9" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/10.jpeg" alt="photo10" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/11.JPG" alt="photo11" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/12.JPG" alt="photo12" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
           <img src="assets/media/13.JPG" alt="photo13" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
-          <img src="assets/media/14.JPeG" alt="photo14" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
+          
           <img src="assets/media/15.JPG" alt="photo15" class="carousel-item snap-start rounded-2xl object-contain w-full sm:w-96 h-80 shadow-md">
         </div>
 
