made some changes..

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="flex items-center gap-3 sm:gap-4">
         <div class="text-3xl sm:text-4xl animate-bounce">🍼</div>
         <div>
-          <h1 class="text-xl sm:text-2xl md:text-3xl font-extrabold tracking-tight text-yellow-300 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">The Name we've been waiting for</h1>
+          <h1 class="text-xl sm:text-2xl md:text-3xl font-extrabold tracking-tight text-yellow-300 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">The Name we've been waiting for!</h1>
 
         </div>
       </div>
@@ -56,7 +56,7 @@
   <main class="max-w-5xl mx-auto space-y-8">
     <!-- Video Section -->
     <section class="bg-white/90 shadow-lg p-6 shape-rounded">
-      <h2 class="text-2xl md:text-3xl font-bold text-yellow-300 mb-6 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">A little journey so far....</h2>
+      <h2 class="text-2xl md:text-3xl font-bold text-yellow-300 mb-6 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">A little journey so far…✨🌸🤍</h2>
       <div class="relative w-full" style="height: clamp(200px, 50vh, 500px);">
         <video controls class="rounded-2xl shadow-lg w-full h-full object-contain" style="background-color: #1a1a1a;">
           <source src="assets/media/Memory.mp4" type="video/mp4">
@@ -67,7 +67,7 @@
 
     <!-- Horizontal carousel (scroll-snap) -->
     <section class="bg-white/90 shadow-lg p-6 shape-wave">
-      <h2 class="text-2xl md:text-3xl font-bold text-yellow-300 mb-6 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">Moments</h2>
+      <h2 class="text-2xl md:text-3xl font-bold text-yellow-300 mb-6 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">Moments ♡ ˚｡⋆</h2>
       <div class="relative">
         <div id="mainCarousel" class="carousel overflow-x-auto scroll-pl-6 snap-x snap-mandatory flex gap-4 py-4">
           <!-- Add your photos in docs/assets/media -->
@@ -103,7 +103,7 @@
     <div id="revealCard" data-name="Smayan" class="bg-gradient-to-br from-emerald-50 via-yellow-50 to-green-100 rounded-3xl p-10 w-11/12 max-w-2xl text-center shadow-2xl transform scale-90 opacity-0 transition-all border-2 border-yellow-300">
       <h3 class="text-base md:text-lg text-yellow-300 uppercase tracking-wider font-bold drop-shadow-md" style="font-family: 'Fredoka One', sans-serif;">Introducing</h3>
       <h2 id="babyName" class="text-5xl md:text-6xl font-extrabold mt-6 text-yellow-300 drop-shadow-xl" style="font-family: 'Fredoka One', sans-serif;"></h2>
-      <p class="mt-6 text-sm md:text-base text-green-700 font-semibold drop-shadow-md" style="font-family: 'Quicksand', sans-serif; line-height: 1.6;">The name originates from the Sanskrit root "Smi" and it means expressing Joy.</p>
+      <p class="mt-6 text-sm md:text-base text-green-700 font-semibold drop-shadow-md" style="font-family: 'Quicksand', sans-serif; line-height: 1.6;">The ame originates from the Sanskrit root "Smi" and it means expressing Joy.</p>
       <div class="mt-8 flex justify-center gap-4">
         <button id="closeReveal" class="px-6 py-3 rounded-xl font-bold text-sm md:text-base">Close</button>
       </div>
