--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div id="revealCard" data-name="Smayan" class="bg-gradient-to-br from-emerald-50 via-yellow-50 to-green-100 rounded-3xl p-10 w-11/12 max-w-2xl text-center shadow-2xl transform scale-90 opacity-0 transition-all border-2 border-yellow-300">
       <h3 class="text-base md:text-lg text-yellow-300 uppercase tracking-wider font-bold drop-shadow-md" style="font-family: 'Fredoka One', sans-serif;">Introducing</h3>
       <h2 id="babyName" class="text-5xl md:text-6xl font-extrabold mt-6 text-yellow-300 drop-shadow-xl" style="font-family: 'Fredoka One', sans-serif;"></h2>
-      <p class="mt-6 text-sm md:text-base text-green-700 font-semibold drop-shadow-md" style="font-family: 'Quicksand', sans-serif; line-height: 1.6;">The ame originates from the Sanskrit root "Smi" and it means expressing Joy.</p>
+      <p class="mt-6 text-sm md:text-base text-green-700 font-semibold drop-shadow-md" style="font-family: 'Quicksand', sans-serif; line-height: 1.6;">The name originates from the Sanskrit root "Smi" and it means expressing Joy.</p>
       <div class="mt-8 flex justify-center gap-4">
         <button id="closeReveal" class="px-6 py-3 rounded-xl font-bold text-sm md:text-base">Close</button>
       </div>
