--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         <div class="text-3xl sm:text-4xl animate-bounce">🍼</div>
         <div>
           <h1 class="text-xl sm:text-2xl md:text-3xl font-extrabold tracking-tight text-yellow-300 drop-shadow-lg" style="font-family: 'Fredoka One', sans-serif;">The Name we've been waiting for!</h1>
-
         </div>
       </div>
       <div class="flex items-center gap-3">
@@ -104,6 +103,7 @@
       <h3 class="text-base md:text-lg text-yellow-300 uppercase tracking-wider font-bold drop-shadow-md" style="font-family: 'Fredoka One', sans-serif;">Introducing</h3>
       <h2 id="babyName" class="text-5xl md:text-6xl font-extrabold mt-6 text-yellow-300 drop-shadow-xl" style="font-family: 'Fredoka One', sans-serif;"></h2>
       <p class="mt-6 text-sm md:text-base text-green-700 font-semibold drop-shadow-md" style="font-family: 'Quicksand', sans-serif; line-height: 1.6;">The name originates from the Sanskrit root "Smi" and it means expressing Joy.</p>
+      <p class="mt-6 text-sm md:text-base text-green-700 font-semibold drop-shadow-md" style="font-family: 'Quicksand', sans-serif; line-height: 1.6;"><p class="text-sm sm:text-base text-green-700 font-medium drop-shadow-md" style="font-family: 'Quicksand', sans-serif;">ఈ పేరు సంస్కృతంలోని “స్మి (Smi)” అనే మూల పదం నుండి ఉద్భవించింది. దీనర్థం ఆనందాన్ని వ్యక్తపరచడం.</p>
       <div class="mt-8 flex justify-center gap-4">
         <button id="closeReveal" class="px-6 py-3 rounded-xl font-bold text-sm md:text-base">Close</button>
       </div>
